<resources>
    <string name="app_name">比心</string>

    <string name="user_reg_input_pwd_hint">请输入密码</string>
    <string name="user_reg_input_verify_code_hint">请输入验证码</string>
    <string name="user_reg_input_phone_hint">请输入手机号</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="third_login">第三方登陆</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="edit_self_main_page">编辑个人主页</string>
    <string name="my_video_moments">我的视频动态</string>
    <string name="share_to_my_frends">分享比心给朋友</string>
    <string name="settings">设置</string>

    <!-- time -->
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>
    <string name="title_activity_group_chat_setting">GroupChatSettingActivity</string>

    <!-- conversation fragment -->
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="home_conversation_tab">会话</string>
    <string name="home_msg_tab">消息</string>
    <string name="chat_typing">对方正在输入…</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="save_exist">文件已存在</string>
    <string name="default_group_name">默认分组</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <!--publicgroup-->
    <string name="title_public_group">公开群</string>
    <string name="btn__create_public_group">创建公开群</string>
    <string name="subtitle_created_public_group">我创建的公开群</string>
    <string name="subtitle_hosting_public_group">我管理的公开群</string>
    <string name="subtitle_joined_public_group">我加入的公开群</string>
    <!-- contact fragment -->
    <string name="home_contact_tab">联系人</string>
    <string name="new_friend">新朋友</string>
    <string name="public_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="addfriend">添加好友</string>
    <string name="contact_add_group">添加群组</string>
    <string name="manangergroup">管理分组</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="summary_agree">同意</string>
    <string name="summary_disagree">拒绝</string>
    <string name="summary_invite_person">邀请人</string>
    <string name="summary_handle_person">处理人</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_group_mem_change">群成员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="save_succ">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="bind_phone_num">绑定手机号</string>
    <string name="update_phone_num">修改密码</string>
    <string name="remove_cache">清除缓存</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="user_exit">退出登陆</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="phone_num">手机号</string>
    <string name="input_new_pwd">请填写新密码</string>
    <string name="confirm_update">确认修改</string>
    <string name="complete_profile">完善资料</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="my_moments">我的视频动态</string>
</resources>
