<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nav_back"
            android:padding="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/settings"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/nav_back"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bind_phone_ll"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/bind_phone_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_bind_phone_number"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/bind_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_phone_num"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_bind_phone_number"
            android:padding="8dp"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:id="@+id/update_pwd_ll">
        <ImageView
            android:id="@+id/update_phone_num_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_change_password"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/update_phone_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_phone_num"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_change_password"
            android:padding="8dp"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:id="@+id/remove_cache_ll">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_bind_phone_number"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/remove_cache_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_cache"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_bind_phone_number"
            android:padding="8dp"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:id="@+id/help_and_feedback_ll">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_remove"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_and_feedback"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_bind_phone_number"
            android:padding="8dp"
            android:visibility="invisible"/>
    </LinearLayout>

    <Button
        android:id="@+id/user_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/white"
        android:text="@string/user_exit"
        android:background="@drawable/login_btn_bg_shape"/>
</LinearLayout>